# vibecodekit-mql5-ea-25.5

./: .gitignore  AGENTS.md  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml
Include/: CMemorySafety.mqh  CPipNormalizer.mqh  CSafeTradeManager.mqh  CSpreadGuard.mqh
docs/: COMMANDS.md  ENV-SETUP-vi.md  PLAN-v5.md  QUICKSTART.md  QUICKSTART.vi.md  USAGE-en.md  USAGE-vi.md  USER-GUIDE-en.md  USER-GUIDE-vi.md  anti-patterns-AVOID.md  input-semantics.yaml  phase-0-spec.md  phase-A-spec.md  phase-B-spec.md  phase-C-spec.md  phase-D-spec.md  phase-E-spec.md
docs/agent-prompts/: README.md  broker-engineer.md  devops.md  perf-analyst.md  risk-auditor.md  strategy-architect.md  trader.md
docs/agent-prompts/actors/: chu-nha.md  chu-thau.md  tho-thi-cong.md
docs/reference-ea/: REPORT.md
docs/references/: 59-trader-checklist.md
docs/rri-personas/: broker-engineer.yaml  devops.yaml  perf-analyst.yaml  risk-auditor.yaml  strategy-architect.yaml  trader.yaml
mcp/vibecodekit-bridge/: README.md  bridge_tools.py
scaffolds/arbitrage-stat/python-bridge/: FLOW-vi.md  README.md
scaffolds/breakout/netting/: FLOW-vi.md  README.md
scaffolds/dca/hedging/: FLOW-vi.md  README.md
scaffolds/grid/hedging/: FLOW-vi.md  README.md
scaffolds/hedging-multi/hedging/: FLOW-vi.md  README.md
scaffolds/hft-async/netting/: FLOW-vi.md
scaffolds/indicator-only/netting/: FLOW-vi.md  README.md
scaffolds/mean-reversion/hedging/: FLOW-vi.md  README.md
scaffolds/ml-onnx/python-bridge/: FLOW-vi.md
scaffolds/news-trading/netting/: FLOW-vi.md  README.md
scaffolds/portfolio-basket/hedging/: FLOW-vi.md
scaffolds/portfolio-basket/netting/: FLOW-vi.md
scaffolds/scalping/hedging/: FLOW-vi.md  README.md
scaffolds/service-llm-bridge/cloud-api/: FLOW-vi.md
scaffolds/service-llm-bridge/embedded-onnx-llm/: FLOW-vi.md  LlmEmbeddedOnnxLlmBridge.mqh
scaffolds/service-llm-bridge/self-hosted-ollama/: FLOW-vi.md
scaffolds/service/standalone/: FLOW-vi.md
scaffolds/stdlib/hedging/: FLOW-vi.md
scaffolds/stdlib/netting/: FLOW-vi.md
scaffolds/stdlib/python-bridge/: FLOW-vi.md
scaffolds/trend/netting/: FLOW-vi.md  README.md
scaffolds/wizard-composable/netting/: FLOW-vi.md
scripts/: audit-plan-v5.py
scripts/tools/: build_reference_report.sh  render_quickstart_screenshots.py
scripts/vibecodekit_mql5/: __init__.py  _agent_io.py  audit.py  auto_build.py  auto_build_docs_ship_stage.py  auto_build_docs_stage.py  auto_fix.py  backtest.py  broker_safety.py  bt_engine.py  build.py  console.py  dashboard.py  deploy_vps.py  docs_assemble.py  docs_assemble_render.py  docs_bundle.py  doctor.py  ea_docs.py  ea_docs_markdown.py  ea_docs_render.py  ea_docs_semantics.py  fixture.py  forge_loop.py  init.py  lint.py  lint_best_practice.py  llm_context.py  manifest.py  method_hiding_check.py  mfe_mae.py  monte_carlo.py  mq5_io.py  multibroker.py  onnx_embed.py  optimize_run.py  optimize_run_xml.py  overfit_check.py  package.py  pip_normalize.py  (+3 more)
scripts/vibecodekit_mql5/ast_parser/: __init__.py  detectors.py  nodes.py  parser.py  tokenizer.py
scripts/vibecodekit_mql5/ea_docs_assets/: style.css
scripts/vibecodekit_mql5/permission/: layer1_source_lint.py  layer4_checklist.py  layer5_methodology.py  orchestrator.py
scripts/vibecodekit_mql5/review/: ceo_review.py  cso.py  eng_review.py  investigate.py  review.py
scripts/vibecodekit_mql5/rri/: __init__.py  escalation.py  matrix.py  rri_bt.py  rri_chart.py  rri_rr.py  sign_off.py  step_sentinel.py
scripts/vibecodekit_mql5/step_gen/: __init__.py  blueprint_gen.py  completion_report.py  contract_gen.py  task_graph_gen.py  tip_gen.py  verify_report.py  vision_gen.py
tests/fixtures/ea-bugs/: README.md
tests/gates/phase-A/: test_agent_io_envelope.py  test_ast_parser.py  test_build_scaffolds.py  test_cli_consolidation.py  test_draft_mode.py  test_ea_bugs_golden_dataset.py  test_init_wizard.py  test_json_flags_smoke.py  test_lint_detectors.py  test_manifest_generation.py  test_pipnorm_unit.py  test_sarif_format.py  test_utf16_mq5_readers.py
tests/gates/phase-B/: test_bt_engine.py  test_fixture_generator.py  (+3 more)
(+64 files in other folders)
